native: preserve loaded library across namespace reloads